# c_uuid_v7

./: .clang-format  .clang-tidy  .gitignore  .pytest.toml  .ruff.toml  .rumdl.toml  .typos.toml  AGENTS.md  Justfile  README.md  _m.py  benchmark.py  cibuildwheel.toml  justfile  main.py  pyproject.toml  setup.py  ty.toml  zls.json
.github/workflows/: ci.yaml  ci.yml  dist.yaml  linux.yaml  macos.yaml  publish.yaml  publish.yml  rumdl.yaml  sdist.yaml  tests.yaml  typos.yaml  windows.yaml  zizmor.yaml
.qwen/: settings.json
.zig-cache/o/1a70651b2dbe43bbea3953311fc14bbf/: cimport.h  cimport.h.d
.zig-cache/o/5cf0e926522e9bea077909e1ad189a48/: cimport.zig
.zig-cache/o/8143c97f33b872866ff797c648ac0886/: cimport.h.d
.zig-cache/o/8cfcfa07d62f926f8e72d1b23271eebe/: cimport.h  cimport.h.d
.zig-cache/o/9bf7e0f438e282041528d4f82d6449cb/: cimport.zig
.zig-cache/o/b58b450d2f04a9feee0b0a92ede7a60f/: cimport.h.d
.zig-cache/o/b7b9a0128469aa901f77d41937cab4c2/: cimport.h  cimport.h.d
.zig-cache/o/e1bdd09f42d444fd01e86812014253d8/: cimport.zig
.zig-cache/o/e1e5c2a907746036c27cf26415b3e975/: cimport.h.d
benchmark/: README.md  compare_pypi_local.py  run.py  run1.py  self_bench.py
py-src/c_uuid_v7/: __init__.py  _core.pyi
py-src/c_uuid_v7/compat/: __init__.py
scripts/: prepare_hpy_source.py  translate_c.ps1
src/: _core.zig  _python.h  c.zig  core.c  core.h  getrandom.c  getrandom.h  hex_pairs.zig  hexpairs.c  hexpairs.h  hpy.c  hpy_core.c  hpy_sum.c  lib.c  lib.zig  platform.h  platform.zig  posix.c  posix.zig  python_compat.h  random.c  random.h  random.zig  romu_trio.zig  simd.h  state.zig  sum.zig  uuid7.zig  win.zig  windows.c  windows.zig
src/c_uuid_v7/: __core.c  __core.pyi  __init__.py  _uuid_v7_c.c  _uuid_v7_c.pyi  _version.py
src/c_uuid_v7/_core/: _core.c  _hex_pairs.c  _hex_pairs.h  _platform.h  _posix.c  _random.c  _windows.c
src/c_uuid_v7/compat/: __init__.py
src/helpers/: ascii.c  ascii.h  hex_decode.c  hex_decode.h  hex_nibble.c  hex_nibble.h  hexpairs.c  hexpairs.h  hexparse.c  hexparse.h  words.c  words.h
src/hex/: hex.c  hex.h  table.c
tests/: test_compat.py  test_sum.py  test_uuid7.py
tools/: prepare_hpy_source.py
