[build-system]
requires = [
    "ziglang == 0.15.2",
    "setuptools == 82.0.1",
    "setuptools-scm == 10.0.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "c_uuid_v7"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Fast UUID v7 generator implemented as a CPython Zig extension"
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Zig",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[dependency-groups]
typos = ["typos == 1.45.0"]
zizmor = ["zizmor == 1.23.1"]
rumdl = ["rumdl == 0.1.67"]
pytest = ["pytest == 9.0.3"]
ci = [
    "ty == 0.0.29",
    "ruff == 0.15.9",
    { include-group = "pytest" },
]
dev = [
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "uuid_utils == 0.14.1",
    "uuid_v7 == 1.0.0",
    "UUIDv7gen == 1.0.3",
    "uuid6 == 2025.0.1",
    "lastuuid == 0.5.0",
    "fastuuid == 0.14.0",
    # # # # # # # # # #
    "polars == 1.39.3",
    "altair == 6.0.0",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.9.0.post1",
]

[tool.setuptools]
package-dir = { "" = "py-src" }

[tool.setuptools.packages.find]
where = ["py-src"]

[tool.setuptools_scm]
version_file = "py-src/c_uuid_v7/_version.py"
fallback_version = "0.0.0"
version_file_template = """\
# This file auto generated by `setuptools-scm`!
# DO NOT EDIT MANUALLY !!!

version: str = "{version}"
__version__: str = version

commit_hash: str = "{scm_version.node}"
version_timestamp: str = "{scm_version.time}"

tag: str = "{scm_version.tag}"
branch: str = "{scm_version.branch}"
commit_date: str = "{scm_version.node_date}"
commit_count_since_tag: int = {scm_version.distance}
"""

[tool.cibuildwheel]
container-engine = "podman"
build-frontend = "uv"
enable = ["pypy"]
build = [
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
    "cp314-*",
    "pp311-*",
]
skip = [
    "*t-*",
    "*-musllinux_s390x",
    "pp311-*_i686",
]
test-command = "pytest"
test-groups = ["pytest"]

[tool.cibuildwheel.linux]
before-all = "python scripts/prepare_hpy_source.py"
test-skip = "*-{armv7l,ppc64le,s390x,riscv64}"
archs = [
    "x86_64",
    "i686",
    "aarch64",
    "armv7l",
    "ppc64le",
    "s390x",
    "riscv64",
]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-armv7l-image = "manylinux_2_31"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-riscv64-image = "manylinux_2_39"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-i686-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-armv7l-image = "musllinux_1_2"
musllinux-ppc64le-image = "musllinux_1_2"
musllinux-riscv64-image = "musllinux_1_2"

[tool.cibuildwheel.macos]
before-all = "python scripts/prepare_hpy_source.py"
archs = [
    "x86_64",
    "arm64",
    "universal2",
]
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.windows]
before-all = "python scripts/prepare_hpy_source.py"
archs = [
    "AMD64",
    "x86",
    "ARM64",
]

[[tool.cibuildwheel.overrides]]
select = "cp3{13,14}-*"
test-environment = { PYTHONMALLOC = "mimalloc" }
