[build-system]
requires = [
    "ziglang == 0.16.0; platform_system != 'Darwin'",
    "setuptools == 82.0.1",
    "setuptools-scm == 10.0.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "c_uuid_v7"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Fast UUID v7 generator implemented as a CPython C extension"
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[dependency-groups]
typos = ["typos == 1.45.1"]
zizmor = ["zizmor == 1.24.1"]
rumdl = ["rumdl == 0.1.83"]
pytest = ["pytest == 9.0.3"]
ci = [
    "ty == 0.0.32",
    "ruff == 0.15.12",
    { include-group = "pytest" },
]
dev = [
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "uuid_utils == 0.14.1",
    "uuid_v7 == 1.0.0",
    "UUIDv7gen == 1.0.3",
    "uuid6 == 2025.0.1",
    "lastuuid == 0.5.0",
    "fastuuid == 0.14.0",
    # # # # # # # # # #
    "polars == 1.40.1",
    "altair == 6.1.0",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.9.0.post1",
]

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_file = "py-src/c_uuid_v7/_version.py"
version_file_template = """\
# This file auto generated by `setuptools-scm`!
# DO NOT EDIT MANUALLY !!!

version: str = "{version}"
__version__: str = version

commit_hash: str = "{scm_version.node}"
version_timestamp: str = "{scm_version.time}"

tag: str = "{scm_version.tag}"
branch: str = "{scm_version.branch}"
commit_date: str = "{scm_version.node_date}"
commit_count_since_tag: int = {scm_version.distance}
"""
